# openfactory-sdk

./: .gitattributes  .gitignore  README.md  api.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json  uns.yml
.devcontainer/features/connectors/: README.md  devcontainer-feature.json  install.sh
.devcontainer/features/connectors/assets/: app_opcua_connector.yml  app_shdr_connector.yml  prometheus_connector_rules.yml
.devcontainer/features/grafana/: README.md  devcontainer-feature.json  install.sh
.devcontainer/features/grafana/assets/grafana/: docker-compose.yml
.devcontainer/features/infra/: README.md  devcontainer-feature.json  install.sh
.devcontainer/features/infra/assets/: app_asset_forwarder.yml  app_prometheus_metrics_registry.yml  create_topics.sh  openfactory-sdk-startup.sh  spinup.sh  teardown.sh  topics.yml
.devcontainer/features/nfs-server/: README.md  devcontainer-feature.json  install.sh
.devcontainer/features/nfs-server/assets/: start-nfs.sh  stop-nfs.sh
.devcontainer/features/opcua-connector/: README.md  devcontainer-feature.json  install.sh
.devcontainer/features/opcua-connector/assets/: docker-compose.yml
.github/workflows/: publish_devcontainer_feature.yml  publish_devcontainer_image.yml
apps/: api.yml  apps.yml  dusttrak-moving-averages.yml  ivac-tools-monitoring.yml
debug/apps/fastapi/: Dockerfile  app_demo.yml
debug/apps/fastapi/src/: app.py
doc/: test_adapter.md
lab-usine/plt-3013/: cnc.yml  dust-trak.yml  ivac.yml  wtvb01.yml
openfactory_sdk/: __init__.py  cli.py  sdk_cli.py
openfactory_sdk/app/: __init__.py  down.py  ls.py  up.py
openfactory_sdk/asset/: __init__.py  inspect.py  ls.py
openfactory_sdk/device/: __init__.py  down.py  ls.py  up.py
scripts/: README.md  bump_version.py  complete_ksql_setup.py  run_virtual_adapters.py  run_virtual_devices.py
scripts/sql/: all_openfactory.sql
(+16 files in other folders)
