[project]
name = "openfactory-sdk"
version = "0.4.1"
description = "A developer SDK for simulating and deploying apps on a local OpenFactory setup."
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.0",
    "rich"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "tomlkit",
    "OpenFactory @ git+https://github.com/openfactoryio/openfactory-core.git@main",
    "MTCAdapters @ git+https://github.com/Demo-Smart-Factory-Concordia-University/MTCAdapters.git",
]

[project.scripts]
openfactory-sdk = "openfactory_sdk.cli:ofa_sdk_cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
