[project]
name = "openfactory-sdk"
version = "0.5.3rc1"
description = "A developer SDK for simulating and deploying apps on a local OpenFactory setup."
requires-python = ">=3.12"
dependencies = [
    "click>=8.3,<9.0",
    "rich>=14.1,<15.0"
]

[project.optional-dependencies]
dev = [
    "flake8",
    "tomlkit",
    "OpenFactory @ git+https://github.com/openfactoryio/openfactory-core.git@main",
    "MTCAdapters @ git+https://github.com/Demo-Smart-Factory-Concordia-University/MTCAdapters.git",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
