[project]
name = "openfactory-sdk"
version = "0.6.3"
description = "A developer SDK for simulating and deploying apps on a local OpenFactory setup."
requires-python = ">=3.12"
dependencies = [
]

[project.optional-dependencies]
dev = [
    "flake8",
    "tomlkit",
    "OpenFactory[fastapi] @ git+https://github.com/openfactoryio/openfactory-core.git@main",
    "MTCAdapters @ git+https://github.com/Demo-Smart-Factory-Concordia-University/MTCAdapters.git",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
